Closed Bug 89854 Opened 24 years ago Closed 23 years ago

netscape 4.x profile migration dialog doesn't fit on 640x480 screen

Categories

(Core Graveyard :: Profile: BackEnd, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.4

People

(Reporter: blizzard, Assigned: ccarlen)

References

Details

Attachments

(4 files)

From Alan: "Run netscape, quit, run mozilla for the first time on a 640x480 display and the dialog is not all visible." Does anyone feel like rogering that dialog so that it isn't long as hell? It should be cleaned up.
This shouldn't be a special xul window at all, it just needs to be a regular prompt with special strings for the buttons. This is thrown from the backend. -> backend
Assignee: ben → ccarlen
Component: Profile Manager FrontEnd → Profile Manager BackEnd
Fully agree. It should just be a nsIPromptService::ConfirmEx. How is it possible with commonDialogs, which are used for that, to have the width of the static text field fixed, the text flowed into it, and it would grow vertically. There's all kinds of dialogs done in wallet where linebreaks are inserted in the properties file to avoid the wide dialog. Whenever those things are localized, these linebreaks have to be redone by hand. Can't we set up the XUL of commonDialogs to avoid this?
Status: NEW → ASSIGNED
Using nsIPromptService to do this makes the text wrap nicely so the fixed width of the dialog. It also cleans up some odd logic in the back-end and another set of .xul/.js files can be removed from the profile resources.
-> 0.9.4
Target Milestone: --- → mozilla0.9.4
The first patch removed some things from migration.properties that it shouldn't have.
Bhuvan - Can you r=? Ben or Blake sr=?
looks good. r=racham. Conrad, please do post a screen shot. thanks.
The slightly better patch uses unicode linefeed chars in the properties file instead of using '#' chars an converting those to linefeeds in the C++.
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
verified in build 2001082808
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: