Bug 89854 - Confirm migration dialog won't fit on small screen. r=racham/sr=ben